# sqlalchemy-auditlog

./: LICENSE  Makefile  pyproject.toml  setup.cfg
src/sqlalchemy_auditlog/: ddl.py  declarative.py  decorator.py  session.py  table.py  tst.py
tests/: conftest.py  test_declarative.py  test_sqlalchemy_auditlog.py
