[tool.poetry]
name = "sqlalchemy-auditlog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "sqlalchemy_auditlog", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
SQLAlchemy = ">=1.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock-resources = {version = "*", extras = ["docker"]}
bandit = "^1.7.4"
black = "^22.3.0"
coverage = "^6.4.1"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.961"
pydocstyle = {extras = ["toml"], version = "^6.1.1"}
SQLAlchemy = {version = ">=1.4", extras = ["mypy"]}
psycopg2 = {version = "*"}

[tool.isort]
profile = 'black'
known_first_party = 'app,tests'
line_length = 100
float_to_top=true
order_by_type = false
use_parentheses = true

[tool.black]
line_length = 100

[tool.mypy]
strict_optional = true
ignore_missing_imports = true
warn_unused_ignores = true
incremental = true
plugins = 'sqlalchemy.ext.mypy.plugin'
exclude = 'tests/examples'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
